src/common/style.scss
@import "leaflet/dist/leaflet.css";

// Custom HyliaSerif font from https://artsyomni.com/hyliaserif
@font-face {
  font-family: HyliaSerif;
  src: url(/fonts/HyliaSerif-v0.009/HyliaSerifBetav0-009/HyliaSerifBeta-Regular.otf);
}

@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap");

@font-face {
  font-family: "OpenSansBold";
  font-style: bold;
  font-weight: 300;
  src: url("https://fonts.gstatic.com/s/opensans/v18/mem5YaGs126MiZpBA-UN7rgOUuhs.ttf");
}

/// Stroke font-character
/// @param  {Integer} $stroke - Stroke width
/// @param  {Color}   $color  - Stroke color
/// @return {List}            - text-shadow list
@function stroke($stroke, $color) {
  $shadow: ();
  $from: $stroke * -1;
  @for $i from $from through $stroke {
    @for $j from $from through $stroke {
      $shadow: append($shadow, $i * 1px $j * 1px 0 $color, comma);
    }
  }
  @return $shadow;
}

/// Stroke font-character
/// @param  {Integer} $stroke - Stroke width
/// @param  {Color}   $color  - Stroke color
/// @return {Style}           - text-shadow
@mixin stroke($stroke, $color) {
  text-shadow: stroke($stroke, $color);
}

html,
body {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
}

#map {
  width: 100%;
  height: 100%;
}

.leaflet-container {
  background: #000000;
}

/* CONTROLS */

.toggelable {
  cursor: pointer;
  box-sizing: border-box;
  transition: background-color 0.2s;
}

.toggled-on {
}

.selectable {
  cursor: pointer;
  box-sizing: border-box;
  transition: background-color 0.2s;
  color: rgba($color: #ffffff, $alpha: 0.5);
}

.selected {
  // background-color: rgba(0, 0, 0, 0.7);
  // border: 1px solid white;
  text-decoration: none !important;
  color: rgba($color: #ffffff, $alpha: 1) !important;
}

.leaflet-control a:hover,
.leaflet-control a:focus,
.leaflet-control a.bar-selected {
  background-color: rgba(0, 0, 0, 0.7);
}

.zd-control {
  position: relative;
  font-family: "Open Sans", sans-serif;
}

.leaflet-touch .leaflet-control-layers {
  border: none;
}

.leaflet-control-layers {
  background: none;
}

.leaflet-control a,
.leaflet-control-layers-expanded,
.zd-control__button,
.zd-control__content,
.zd-legend,
.zd-toast {
  background-color: rgba(0, 0, 0, 0.75);
  color: white;
}

.leaflet-control a.leaflet-disabled {
  background-color: rgba(0, 0, 0, 0.8);
  color: #bbb;
  cursor: default;
}

.leaflet-control-layers a.leaflet-control-layers-toggle,
.zd-control__button {
  width: 30px;
  height: 30px;
  line-height: 30px;
  font-size: 22px;
  text-align: center;
  border: 2px solid rgba(0, 0, 0, 0.2);
  border-radius: 2px;
  background-clip: padding-box;
  cursor: pointer;
}

.zd-control__content,
.zd-legend {
  font-size: 1.25em;
}

.zd-control__content {
  position: absolute;
  top: 0;
  left: 34px;
  width: 0;
  overflow: hidden;
  transition: width 0.2s;
}

.zd-control__content--open {
  width: 300px;
}

.zd-search__searchbox {
  box-sizing: border-box;
  height: 34px;
  width: 100%;
  font-size: inherit;
}

.zd-search__results {
  list-style: none;
  margin: auto;
  padding: 0;
  // add scrollbar
  overflow-y: auto;
  max-height: 100vh;
}

.zd-search__result {
  cursor: pointer;
  padding-left: 50px;
  background-repeat: no-repeat;
}

.zd-search__result + .zd-search__result {
  border-top: 1px solid gray;
}

.zd-settings__setting {
  height: 30px;
}

.zd-settings__label {
  text-align: left;
}

.zd-settings__button {
  width: 50px;
  text-align: center;
}

.zd-toast-container {
  max-width: 100%;
  width: 500px;
}

.zd-toast {
  width: 100%;
  margin: 1em;
  padding: 1em;
}

/* LEGEND */

.leaflet-top.leaflet-right {
  height: 100%;
}

.leaflet-bottom.leaflet-right {
  width: 100%;
  max-height: 40%;
}

.leaflet-right .zd-legend {
  margin-right: 0;
}

.leaflet-top .zd-legend {
  margin-top: 0;
}

.leaflet-bottom .zd-legend {
  margin-bottom: 0;
}

.zd-legend--portrait {
  width: 100%;
  text-align: center;
  overflow: hidden;
}

.zd-legend--landscape {
  display: none;
  height: 100%;
  width: 350px;
  overflow: auto;
}

@media screen and (orientation: landscape) and (min-width: 768px) {
  .zd-legend--landscape {
    display: flex;
    align-content: flex-start;
    flex-wrap: wrap;
  }

  .zd-legend--portrait {
    display: none;
  }
}

.zd-legend__header {
  margin: 0;
  width: 100%;
  cursor: pointer;
}

.zd-legend__categories {
  list-style: none;
  margin: 0;
  padding: 5px;
  display: flex;
  flex-direction: column;
  flex-grow: 1;
}

.zd-legend--portrait .zd-legend__categories {
  height: 0px;
  padding: 5px 0px 0px 0px;
  overflow: scroll;
  transition: height 0.2s;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

.zd-legend--portrait .zd-legend__categories--show {
  height: 190px;
}

.zd-legend--portrait .zd-legend-allNoneUl {
  display: none;
}

.zd-legend--portrait .zd-legend-allNoneUl--show {
  display: flex;
}

.zd-legend--portrait .zd-legend__categories {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
}

.zd-legend--portrait ul ul {
  display: flex;
  flex-direction: column;
}

.zd-legend--portrait ul ul li {
  display: flex;
}

.zd-legend__all,
.zd-legend__none,
.zd-legend__category {
  height: 35px;
  flex-grow: 1;
}

.zd-legend__all,
.zd-legend__none {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-basis: 0;
  flex-grow: 1;
}

.zd-legend-allNoneUl {
  width: 100%;
  list-style: none;
  display: flex;
  flex-direction: row;
  padding: 0;
  margin: 0;
  margin-top: 1em;
  justify-content: center;
}

.zd-legend__category {
  /*    margin: -10px 0;
    padding: 5px 0;*/
  background-repeat: no-repeat;
  // text-decoration: line-through;
  display: flex;
  align-items: center;
}

.zd-legend__category-div {
  display: flex;
  flex-direction: row;
  justify-content: start;
  align-items: center;
}

//Target color for svg #e6e61d
//https://codepen.io/sosuke/pen/Pjoqqp
.zd-legend__icon__svg,
.zd-marker-icon-svg {
  filter: invert(90%) sepia(51%) saturate(731%) hue-rotate(359deg)
    brightness(89%) contrast(104%);
}

/* LEGEND GROUPS */
.zd-legend--portrait .zd-legend-group-ul {
  margin: 5px;
}

.zd-legend-group {
  list-style: none;
  margin: 0px 0px 0px 5px;
  padding: 0;
}

.zd-legend-group__header {
  display: flex;
  flex-direction: row;
}

.zd-legend-group__title,
.zd-legend-group__dropdown {
  color: #e1d698;
  //Adds an outline to the text to make it stand out better
  margin: 0px 0px 0px 0px;
  font-family: "HyliaSerif", "OpenSansBold", "Open Sans", sans-serif;
  font-weight: lighter !important;
}

.zd-legend-group__dropdown {
  margin-left: 5px;
}

.zd-legend-group__body {
  column-count: 2;
  list-style: none;
  padding: 0;
}

/* LOCATION TEXT LABELS */

.leaflet-tooltip-pane {
  z-index: 550; /* put location text labels underneath markers */
}

.leaflet-tooltip.zd-location-label {
  background-color: transparent;
  border: transparent;
  box-shadow: none;
}

.zd-map-botw .leaflet-tooltip.zd-location-label,
.zd-map-totk .leaflet-tooltip.zd-location-label {
  font-size: 18px;
  color: #f8efae;
  @include stroke(1, #977f41);
}

.zd-map-la .leaflet-tooltip.zd-location-label {
  font-size: 18px;
  font-style: italic;
  color: #fff6e6;
}

.zd-map-totk .leaflet-tooltip.zd-location-label--with-icon {
  font-size: 14px;
}

/* POPUPS */

.zd-popup__loading-indicator {
  text-align: center;
  color: white;
}

.zd-popup__footer {
  text-align: center;
  font-style: italic;
}

.zd-popup__controls {
  text-align: center;
  font-size: 18px;
}

.zd-popup__controls .zd-popup__control {
  color: white;
}

.zd-popup__controls .zd-popup__control:hover {
  color: #7f7f7f;
  cursor: pointer;
}

.zd-popup__control + .zd-popup__control,
.zd-popup__coordinate + .zd-popup__coordinate {
  margin-left: 18px;
}

.zd-popup__control--uncomplete {
  display: none;
}

.zd-popup__controls--completed .zd-popup__control--complete {
  display: none;
}

.zd-popup__controls--completed .zd-popup__control--uncomplete {
  display: inline-block;
  margin-left: 0;
}

.zd-popup__controls--noedit .zd-popup__control--edit {
  display: none;
}

.internal-link {
  border-bottom: 1px dashed black;
  cursor: pointer;
}

.zd-popup li.gallerybox {
  display: block;
}

.zd-popup__title {
  font-family: "HyliaSerif", "OpenSansBold", "Open Sans", sans-serif;
  font-weight: lighter;
}

//Forum link
.zd-popup a {
  color: #0096ff;
}

//Contribute links eetc...
.leaflet-popup-content a {
  color: #0096ff;
}

.leaflet-popup-content-wrapper {
  background-color: rgba(0, 0, 0, 0.8);
}

.leaflet-popup-tip {
  background-color: rgba(0, 0, 0, 0.8);
}

.leaflet-popup-content {
  color: white;
}

.leaflet-container a.leaflet-popup-close-button {
  color: white;
}

.zd-popup__body {
  margin-bottom: 0.5em;
}

.zd-popup__footer {
  margin-bottom: 0.5em;
}

